--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="conquer的个人博客1111 : 前端博客">
+    <meta name="description" content="conquer的个人博客 : 前端博客">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/hdepro">View on GitHub</a>
 
-          <h1 id="project_title">conquer的个人博客</h1>
+          <h1 id="project_title">conquer的个人博客111111</h1>
           <h2 id="project_tagline">前端博客</h2>
 
         </header>
